<?xml version="1.0"?>
<package format="2">
  <name>robot_state_machine</name>
  <version>0.0.1</version>
  <description>The robot_state_machine package for handling robot state transitions with Boost statechart</description>

  <maintainer email="gopan@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies required at build-time -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
